--- a/chaps.bib
+++ b/chaps.bib
@@ -1,7 +1,21 @@
 @InCollection{1,
-  title = {Mobile sensing in relationship research (in press)},
-  author = {Dr. Adela C. Timmons},
-  booktitle = {Mobile sensing in relationship research},
-  year = {2023},
+  title = {Reconsolidation and Fear extinction: an update.},
+  author = {Marie-H. Monfils},
+  booktitle = {Current Topics in Behavioral Neurosciences (CTBN). Mohamed Milad and Seth Norrholm, Editors. },
+  year = {2022},
+  publisher = {.},
+}
+@InCollection{2,
+  title = {How Can Intrusive Thinking Be Conceptualized at the Level of Psychological Mechanisms? },
+  author = {Marie-H. Monfils},
+  booktitle = {Ernst Strungmann Forum book Intrusive Thinking across Neuropsychological Disorders.},
+  year = {2021},
+  publisher = {.},
+}
+@InCollection{3,
+  title = {Neuropsychological Mechanisms of Intrusive Thinking. },
+  author = {Marie-H. Monfils},
+  booktitle = {In Ernst Strungmann Forum book Intrusive Thinking across Neuropsychological Disorders},
+  year = {2021},
   publisher = {.},
 }
