--- a/preprints.bib
+++ b/preprints.bib
@@ -1,9 +1,45 @@
-@article{1Schnyer_2022,
-	doi = {10.31219/osf.io/4jdy7},
-	url = {https://doi.org/10.31219%2Fosf.io%2F4jdy7},
+@article{1Smits_2022,
+	doi = {10.21203/rs.3.rs-2298817/v1},
+	url = {https://doi.org/10.21203%2Frs.3.rs-2298817%2Fv1},
 	year = 2022,
-	month = {sep},
+	month = {dec},
+	publisher = {Research Square Platform {LLC}},
+	author = {Jasper A. J. Smits and Marie-H. Monfils and Michael W. Otto and Michael J. Telch and Jason Shumake and Justin S. Feinstein and Sahib S. Khalsa and Adam R. Cobb and E. Marie Parsons and Laura J. Long and Bryan McSpadden and David Johnson and Alma Greenberg and Exposure Therapy Consortium Therapy Consortium},
+	title = {{CO}2 Reactivity as a Biomarker of Exposure-based Therapy Non-Response: Study Protocol}
+}
+@article{2Agee_2022,
+	doi = {10.1101/2021.12.30.474464},
+	url = {https://doi.org/10.1101%2F2021.12.30.474464},
+	year = 2022,
+	month = {jan},
+	publisher = {Cold Spring Harbor Laboratory},
+	author = {Laura A. Agee and Emily N. Hilz and Dohyun Jun and Victoria Nemchek and Hongjoo J. Lee and Marie-H. Monfils},
+	title = {Patterns of Arc {mRNA} expression in the rat brain following dual recall of fear- and reward-based socially acquired information}
+}
+@article{3Song_2021,
+	doi = {10.31234/osf.io/2fhr7},
+	url = {https://doi.org/10.31234%2Fosf.io%2F2fhr7},
+	year = 2021,
+	month = {oct},
 	publisher = {Center for Open Science},
-	author = {David M Schnyer and Ian Dobbins},
-	title = {Priming, to appear in Oxford Handbook of Human Memory}
+	author = {Mingyu Song and Carolyn Jones and Marie-H. Monfils and Yael Niv},
+	title = {Explaining the effectiveness of fear extinction through latent-cause inference}
+}
+@article{4Hilz_2021,
+	doi = {10.1101/2021.07.20.453088},
+	url = {https://doi.org/10.1101%2F2021.07.20.453088},
+	year = 2021,
+	month = {jul},
+	publisher = {Cold Spring Harbor Laboratory},
+	author = {Emily N Hilz and Laura A. Agee and Donyun Jun and Marie H Monfils and Hongjoo J. Lee},
+	title = {Expression patterns of Arc {mRNA} after renewal of appetitive behavior in female rats}
+}
+@article{5Hilz_2021,
+	doi = {10.1101/2021.07.28.454029},
+	url = {https://doi.org/10.1101%2F2021.07.28.454029},
+	year = 2021,
+	month = {jul},
+	publisher = {Cold Spring Harbor Laboratory},
+	author = {Emily N. Hilz and Marcelle Olvera and Dohyun Jun and Megha Chadha and Ross Gillette and Marie-H. Monfils and Andrea C. Gore and Hongjoo J. Lee},
+	title = {Hormonal contraceptives alter amphetamine place preference and responsivity in the intact female rat}
 }
