--- a/pubs.bib
+++ b/pubs.bib
@@ -1,158 +1,152 @@
-@article{1Zhao_2023,
-	doi = {10.1007/s10488-023-01259-w},
-	url = {https://doi.org/10.1007%2Fs10488-023-01259-w},
-	year = 2023,
-	month = {mar},
-	publisher = {Springer Science and Business Media {LLC}},
-	author = {Xin Zhao and Timothy Hayes and Adela C. Timmons and Wensong Wu and Stacy L. Frazier},
-	title = {Unpacking Inequities in {ADHD} Diagnosis: Examining Individual-Level Race/Ethnicity and State-Level Online Information-Seeking Patterns},
-	journal = {Administration and Policy in Mental Health and Mental Health Services Research}
+@article{1Monfils_2022,
+	doi = {10.1042/etls20220001},
+	url = {https://doi.org/10.1042%2Fetls20220001},
+	year = 2022,
+	month = {sep},
+	publisher = {Portland Press Ltd.},
+	volume = {6},
+	number = {5},
+	pages = {445--455},
+	author = {Marie-H. Monfils and Michael Domjan},
+	editor = {Amy L Milton},
+	title = {The elegant complexity of fear in non-human animals},
+	journal = {Emerging Topics in Life Sciences}
 }
-@article{2Timmons_2023,
-	doi = {10.1037/emo0001201},
-	url = {https://doi.org/10.1037%2Femo0001201},
-	year = 2023,
-	month = {jan},
+@article{2Monfils_2022,
+	doi = {10.3389/fnbeh.2022.954906},
+	url = {https://doi.org/10.3389%2Ffnbeh.2022.954906},
+	year = 2022,
+	month = {jul},
+	publisher = {Frontiers Media {SA}},
+	volume = {16},
+	author = {Marie-H. Monfils and Hongjoo J. Lee and Roberto U. Cofres{\'{\i}} and Rueben A. Gonzales},
+	title = {Friend recollections, and a collection of collaborations with Nadia},
+	journal = {Frontiers in Behavioral Neuroscience}
+}
+@article{3Monfils_2022,
+	doi = {10.1016/j.biopsych.2022.05.005},
+	url = {https://doi.org/10.1016%2Fj.biopsych.2022.05.005},
+	year = 2022,
+	month = {jul},
+	publisher = {Elsevier {BV}},
+	volume = {92},
+	number = {2},
+	pages = {102--103},
+	author = {Marie-H. Monfils},
+	title = {The High Road to Inhibiting Fear Memories},
+	journal = {Biological Psychiatry}
+}
+@article{4Hilz_2022,
+	doi = {10.1037/bne0000520},
+	url = {https://doi.org/10.1037%2Fbne0000520},
+	year = 2022,
+	month = {aug},
 	publisher = {American Psychological Association ({APA})},
-	author = {Adela C. Timmons and Sohyun C. Han and Theodora Chaspari and Yehsong Kim and Shrikanth Narayanan and Jacqueline B. Duong and Natalia Simo Fiallo and Gayla Margolin},
-	title = {Relationship satisfaction, feelings of closeness and annoyance, and linkage in electrodermal activity.},
-	journal = {Emotion}
+	volume = {136},
+	number = {4},
+	pages = {318--329},
+	author = {Emily N. Hilz and Marcelle E. Olvera and Dohyun Jun and Megha Chadha and Ross Gillette and Marie-H. Monfils and Andrea C. Gore and Hongjoo J. Lee},
+	title = {Hormonal contraceptives alter amphetamine place preference and responsivity in the intact female rat.},
+	journal = {Behavioral Neuroscience}
 }
-@article{3Timmons_2022,
-	doi = {10.1177/17456916221134490},
-	url = {https://doi.org/10.1177%2F17456916221134490},
+@article{5Smits_2022,
+	doi = {10.1186/s12888-022-04478-x},
+	url = {https://doi.org/10.1186%2Fs12888-022-04478-x},
 	year = 2022,
 	month = {dec},
-	publisher = {{SAGE} Publications},
-	pages = {174569162211344},
-	author = {Adela C. Timmons and Jacqueline B. Duong and Natalia Simo Fiallo and Theodore Lee and Huong Phuc Quynh Vo and Matthew W. Ahle and Jonathan S. Comer and LaPrincess C. Brewer and Stacy L. Frazier and Theodora Chaspari},
-	title = {A Call to Action on Assessing and Mitigating Bias in Artificial Intelligence Applications for Mental Health},
-	journal = {Perspectives on Psychological Science}
-}
-@article{4Ramos_2021,
-	doi = {10.1111/famp.12719},
-	url = {https://doi.org/10.1111%2Ffamp.12719},
-	year = 2022,
-	month = {sep},
-	publisher = {Wiley},
-	volume = {61},
-	number = {3},
-	pages = {1305--1323},
-	author = {Michelle C. Ramos and Reout Arbel and Adela C. Timmons and Aubrey J. Rodriguez and Gayla Margolin},
-	title = {Observed parent{\textendash}adolescent coalitions and family hostilities during family discussions: Associations with marital aggression},
-	journal = {Family Process}
-}
-@article{5Margolin_2022,
-	doi = {10.1037/fam0000979},
-	url = {https://doi.org/10.1037%2Ffam0000979},
-	year = 2022,
-	month = {sep},
-	publisher = {American Psychological Association ({APA})},
-	volume = {36},
-	number = {6},
-	pages = {863--873},
-	author = {Gayla Margolin and Marie-{\`{E}}ve Daspe and Adela C. Timmons and Geoffrey W. Corner and Corey Pettit and Hannah F. Rasmussen and Theodora Chaspari and Sohyun C. Han and Reout Arbel and Lauren Spies Shapiro and Kelly F. M. Kazmierski and Larissa B. Del Piero and Hannah L. Schacter},
-	title = {What happens when romantic couples discuss personal loss? Relational, emotional, and physiological impacts.},
-	journal = {Journal of Family Psychology}
-}
-@article{6Zhao_2021,
-	doi = {10.1007/s10488-021-01168-w},
-	url = {https://doi.org/10.1007%2Fs10488-021-01168-w},
-	year = 2021,
-	month = {sep},
 	publisher = {Springer Science and Business Media {LLC}},
-	volume = {49},
-	number = {3},
-	pages = {357--373},
-	author = {Xin Zhao and Stefany J. Coxe and Adela C. Timmons and Stacy L. Frazier},
-	title = {Mental Health Information Seeking Online: A Google Trends Analysis of {ADHD}},
-	journal = {Administration and Policy in Mental Health and Mental Health Services Research}
+	volume = {22},
+	number = {1},
+	author = {Jasper A. J. Smits and Marie-H. Monfils and Michael W. Otto and Michael J. Telch and Jason Shumake and Justin S. Feinstein and Sahib S. Khalsa and Adam R. Cobb and E. Marie Parsons and Laura J. Long and Bryan McSpadden and David Johnson and Alma Greenberg and},
+	title = {{CO}2 reactivity as a biomarker of exposure-based therapy non-response: study protocol},
+	journal = {{BMC} Psychiatry}
 }
-@article{7Han_2021,
-	doi = {10.1016/j.biopsycho.2021.108082},
-	url = {https://doi.org/10.1016%2Fj.biopsycho.2021.108082},
+@article{6Agee_2022,
+	doi = {10.1016/j.neuroscience.2021.11.032},
+	url = {https://doi.org/10.1016%2Fj.neuroscience.2021.11.032},
 	year = 2021,
-	month = {apr},
+	month = {jan},
 	publisher = {Elsevier {BV}},
-	volume = {161},
-	pages = {108082},
-	author = {Sohyun C. Han and Hannah L. Schacter and Adela C. Timmons and Yehsong Kim and Stassja Sichko and Corey Pettit and Theodora Chaspari and Shrikanth Narayanan and Gayla Margolin},
-	title = {Romantic partner presence and physiological responses in daily life: Attachment style as a moderator},
-	journal = {Biological Psychology}
+	volume = {481},
+	pages = {30--46},
+	author = {Laura A. Agee and Victoria Nemchek and Cassidy A. Malone and Hongjoo J. Lee and Marie-H. Monfils},
+	title = {Appetitive Behavior in the Social Transmission of Food Preference Paradigm Predicts Activation of Orexin-A producing Neurons in a Sex-Dependent Manner},
+	journal = {Neuroscience}
 }
-@article{8Han_2021,
-	doi = {10.1111/famp.12644},
-	url = {https://doi.org/10.1111%2Ffamp.12644},
+@article{7Nemchek_2021,
+	doi = {10.3389/fnbeh.2021.714927},
+	url = {https://doi.org/10.3389%2Ffnbeh.2021.714927},
 	year = 2021,
-	month = {mar},
-	publisher = {Wiley},
-	volume = {60},
-	number = {2},
-	pages = {441--456},
-	author = {Sohyun C. Han and Brian Baucom and Adela C. Timmons and Gayla Margolin},
-	title = {A Systematic Review of Respiratory Sinus Arrhythmia in Romantic Relationships},
-	journal = {Family Process}
+	month = {jul},
+	publisher = {Frontiers Media {SA}},
+	volume = {15},
+	author = {Victoria Nemchek and Laura A. Agee and Cassidy A. Malone and Marissa Raskin and Sydney Seese and Marie H. Monfils},
+	title = {Altering Perceived Context: Transportation Cues Influence Novelty-Induced Context Exploration},
+	journal = {Frontiers in Behavioral Neuroscience}
 }
-@article{9Timmons_2021,
-	doi = {10.1037/fam0000699},
-	url = {https://doi.org/10.1037%2Ffam0000699},
+@article{8Hilz_2022,
+	doi = {10.1037/bne0000484},
+	url = {https://doi.org/10.1037%2Fbne0000484},
 	year = 2021,
-	month = {mar},
+	month = {feb},
 	publisher = {American Psychological Association ({APA})},
-	volume = {35},
-	number = {2},
-	pages = {149--159},
-	author = {Adela C. Timmons and Sohyun C. Han and Yehsong Kim and Corey Pettit and Laura Perrone and Kaitlyn Power and Laura Vitale and Gayla Margolin},
-	title = {Fluctuations in pronoun use in everyday life: Understanding couple aggression in context.},
-	journal = {Journal of Family Psychology}
+	volume = {136},
+	number = {1},
+	pages = {19--29},
+	author = {Emily N. Hilz and Suzanne M. Lewis and Megan E. Olshavsky and Elizabeth S. Khoury and Andrea C. Gore and Marie H. Monfils and Hongjoo J. Lee},
+	title = {Sex differences in conditioned orienting and the role of estradiol in addiction-related behaviors.},
+	journal = {Behavioral Neuroscience}
 }
-@article{10Carl_2021,
-	doi = {10.1111/bjc.12286},
-	url = {https://doi.org/10.1111%2Fbjc.12286},
+@article{9Gershman_2021,
+	doi = {10.3389/fnbeh.2021.786900},
+	url = {https://doi.org/10.3389%2Ffnbeh.2021.786900},
 	year = 2021,
-	month = {mar},
-	publisher = {Wiley},
-	volume = {61},
-	number = {S1},
-	pages = {130--135},
-	author = {Jenna R. Carl and Deborah J. Jones and Oliver J. Lindhiem and Brian D. Doss and Kenneth R. Weingardt and Adela C. Timmons and Jonathan S. Comer},
-	title = {Regulating digital therapeutics for mental health: Opportunities, challenges, and the essential role of psychologists},
-	journal = {British Journal of Clinical Psychology}
+	month = {nov},
+	publisher = {Frontiers Media {SA}},
+	volume = {15},
+	author = {Samuel J. Gershman and Carolyn E. Jones and Kenneth A. Norman and Marie-H. Monfils and Yael Niv},
+	title = {Corrigendum: Gradual extinction prevents the return of fear: implications for the discovery of state},
+	journal = {Frontiers in Behavioral Neuroscience}
 }
-@article{11Han_2020,
-	doi = {10.1177/1948550620958806},
-	url = {https://doi.org/10.1177%2F1948550620958806},
-	year = 2021,
+@article{10Lancaster_2020,
+	doi = {10.1016/j.brat.2020.103730},
+	url = {https://doi.org/10.1016%2Fj.brat.2020.103730},
+	year = 2020,
+	month = {dec},
+	publisher = {Elsevier {BV}},
+	volume = {135},
+	pages = {103730},
+	author = {Cynthia L. Lancaster and Marie-H. Monfils and Michael J. Telch},
+	title = {Augmenting exposure therapy with pre-extinction fear memory reactivation and deepened extinction: A randomized controlled trial},
+	journal = {Behaviour Research and Therapy}
+}
+@article{11Blujus_2020,
+	doi = {10.1037/pne0000209},
+	url = {https://doi.org/10.1037%2Fpne0000209},
+	year = 2020,
 	month = {sep},
-	publisher = {{SAGE} Publications},
-	pages = {194855062095880},
-	author = {Sohyun C. Han and Hannah L. Schacter and Adela C. Timmons and Yehsong Kim and Stassja Sichko and Corey Pettit and Gayla Margolin},
-	title = {Feelings of Annoyance and Spoken Anger Words in Couples' Everyday Lives: The Role of Family-of-Origin Aggression},
-	journal = {Social Psychological and Personality Science}
+	publisher = {American Psychological Association ({APA})},
+	volume = {13},
+	number = {3},
+	pages = {406--423},
+	author = {Jenna K. Blujus and Ina Prevalska and Silvia F. Quevedo and Allison Auchter and Laura E. Korthauer and Michelle M. Dunk and Marie H. Monfils and Ira Driscoll},
+	title = {Updating mechanisms using an olfactory cue were not successful in improving memory in a rodent model of cognitive aging or in older adults.},
+	journal = {Psychology {\&} Neuroscience}
 }
-@article{12Schacter_2020,
-	doi = {10.1093/abm/kaaa019},
-	url = {https://doi.org/10.1093%2Fabm%2Fkaaa019},
+@article{12Auchter_2020,
+	doi = {10.3389/fncel.2020.00130},
+	url = {https://doi.org/10.3389%2Ffncel.2020.00130},
 	year = 2020,
-	month = {apr},
-	publisher = {Oxford University Press ({OUP})},
-	volume = {54},
-	number = {10},
-	pages = {794--803},
-	author = {Hannah L Schacter and Corey Pettit and Yehsong Kim and Stassja Sichko and Adela C Timmons and Theodora Chaspari and Sohyun C Han and Gayla Margolin},
-	title = {A Matter of the Heart: Daytime Relationship Functioning and Overnight Heart Rate in Young Dating Couples},
-	journal = {Annals of Behavioral Medicine}
+	month = {may},
+	publisher = {Frontiers Media {SA}},
+	volume = {14},
+	author = {Allison M. Auchter and Douglas W. Barrett and Marie H. Monfils and F. Gonzalez-Lima},
+	title = {Methylene Blue Preserves Cytochrome Oxidase Activity and Prevents Neurodegeneration and Memory Impairment in Rats With Chronic Cerebral Hypoperfusion},
+	journal = {Frontiers in Cellular Neuroscience}
 }
-@article{13Gupta_2020,
-	doi = {10.1145/3372045},
-	url = {https://doi.org/10.1145%2F3372045},
-	year = 2020,
-	month = {mar},
-	publisher = {Association for Computing Machinery ({ACM})},
-	volume = {20},
-	number = {2},
-	pages = {1--20},
-	author = {Krit Gupta and Aditya Gujral and Theodora Chaspari and Adela C. Timmons and Sohyun Han and Yehsong Kim and Sarah Barrett and Stassja Sichko and Gayla Margolin},
-	title = {Sub-Population Specific Models of Couples' Conflict},
-	journal = {{ACM} Transactions on Internet Technology}
+@Article{1,
+  title = {Song, Monfils, Jones, and Niv.  Explaining the effectiveness of fear extinction through latent-cause inference. },
+  author = {Marie-H. Monfils},
+  journal = {Neurons Behavior Data Analysis & Theory Journal. },
+  year = {2022},
 }
