--- a/chaps.bib
+++ b/chaps.bib
@@ -1,3 +1,5 @@
+ @inbook{Raskin_2023, title={Reconsolidation and Fear Extinction: An Update}, ISBN={9783031430053}, ISSN={1866-3389}, url={http://dx.doi.org/10.1007/7854_2023_438}, DOI={10.1007/7854_2023_438}, booktitle={Current Topics in Behavioral Neurosciences}, publisher={Springer International Publishing}, author={Raskin, Marissa and Monfils, Marie-H.}, year={2023}, pages={307–333} }
+
 @InCollection{1,
   title = {Reconsolidation and Fear extinction: an update.},
   author = {Marie-H. Monfils},
