--- a/pubs.bib
+++ b/pubs.bib
@@ -1,149 +1,31 @@
-@article{1Monfils_2022,
-	doi = {10.1042/etls20220001},
-	url = {https://doi.org/10.1042%2Fetls20220001},
-	year = 2022,
-	month = {sep},
-	publisher = {Portland Press Ltd.},
-	volume = {6},
-	number = {5},
-	pages = {445--455},
-	author = {Marie-H. Monfils and Michael Domjan},
-	editor = {Amy L Milton},
-	title = {The elegant complexity of fear in non-human animals},
-	journal = {Emerging Topics in Life Sciences}
-}
-@article{2Monfils_2022,
-	doi = {10.3389/fnbeh.2022.954906},
-	url = {https://doi.org/10.3389%2Ffnbeh.2022.954906},
-	year = 2022,
-	month = {jul},
-	publisher = {Frontiers Media {SA}},
-	volume = {16},
-	author = {Marie-H. Monfils and Hongjoo J. Lee and Roberto U. Cofres{\'{\i}} and Rueben A. Gonzales},
-	title = {Friend recollections, and a collection of collaborations with Nadia},
-	journal = {Frontiers in Behavioral Neuroscience}
-}
-@article{3Monfils_2022,
-	doi = {10.1016/j.biopsych.2022.05.005},
-	url = {https://doi.org/10.1016%2Fj.biopsych.2022.05.005},
-	year = 2022,
-	month = {jul},
-	publisher = {Elsevier {BV}},
-	volume = {92},
-	number = {2},
-	pages = {102--103},
-	author = {Marie-H. Monfils},
-	title = {The High Road to Inhibiting Fear Memories},
-	journal = {Biological Psychiatry}
-}
-@article{4Hilz_2022,
-	doi = {10.1037/bne0000520},
-	url = {https://doi.org/10.1037%2Fbne0000520},
-	year = 2022,
-	month = {aug},
-	publisher = {American Psychological Association ({APA})},
-	volume = {136},
-	number = {4},
-	pages = {318--329},
-	author = {Emily N. Hilz and Marcelle E. Olvera and Dohyun Jun and Megha Chadha and Ross Gillette and Marie-H. Monfils and Andrea C. Gore and Hongjoo J. Lee},
-	title = {Hormonal contraceptives alter amphetamine place preference and responsivity in the intact female rat.},
-	journal = {Behavioral Neuroscience}
-}
-@article{5Smits_2022,
-	doi = {10.1186/s12888-022-04478-x},
-	url = {https://doi.org/10.1186%2Fs12888-022-04478-x},
-	year = 2022,
-	month = {dec},
-	publisher = {Springer Science and Business Media {LLC}},
-	volume = {22},
-	number = {1},
-	author = {Jasper A. J. Smits and Marie-H. Monfils and Michael W. Otto and Michael J. Telch and Jason Shumake and Justin S. Feinstein and Sahib S. Khalsa and Adam R. Cobb and E. Marie Parsons and Laura J. Long and Bryan McSpadden and David Johnson and Alma Greenberg and},
-	title = {{CO}2 reactivity as a biomarker of exposure-based therapy non-response: study protocol},
-	journal = {{BMC} Psychiatry}
-}
-@article{6Agee_2022,
-	doi = {10.1016/j.neuroscience.2021.11.032},
-	url = {https://doi.org/10.1016%2Fj.neuroscience.2021.11.032},
-	year = 2021,
-	month = {jan},
-	publisher = {Elsevier {BV}},
-	volume = {481},
-	pages = {30--46},
-	author = {Laura A. Agee and Victoria Nemchek and Cassidy A. Malone and Hongjoo J. Lee and Marie-H. Monfils},
-	title = {Appetitive Behavior in the Social Transmission of Food Preference Paradigm Predicts Activation of Orexin-A producing Neurons in a Sex-Dependent Manner},
-	journal = {Neuroscience}
-}
-@article{7Nemchek_2021,
-	doi = {10.3389/fnbeh.2021.714927},
-	url = {https://doi.org/10.3389%2Ffnbeh.2021.714927},
-	year = 2021,
-	month = {jul},
-	publisher = {Frontiers Media {SA}},
-	volume = {15},
-	author = {Victoria Nemchek and Laura A. Agee and Cassidy A. Malone and Marissa Raskin and Sydney Seese and Marie H. Monfils},
-	title = {Altering Perceived Context: Transportation Cues Influence Novelty-Induced Context Exploration},
-	journal = {Frontiers in Behavioral Neuroscience}
-}
-@article{8Hilz_2022,
-	doi = {10.1037/bne0000484},
-	url = {https://doi.org/10.1037%2Fbne0000484},
-	year = 2021,
-	month = {feb},
-	publisher = {American Psychological Association ({APA})},
-	volume = {136},
-	number = {1},
-	pages = {19--29},
-	author = {Emily N. Hilz and Suzanne M. Lewis and Megan E. Olshavsky and Elizabeth S. Khoury and Andrea C. Gore and Marie H. Monfils and Hongjoo J. Lee},
-	title = {Sex differences in conditioned orienting and the role of estradiol in addiction-related behaviors.},
-	journal = {Behavioral Neuroscience}
-}
-@article{9Gershman_2021,
-	doi = {10.3389/fnbeh.2021.786900},
-	url = {https://doi.org/10.3389%2Ffnbeh.2021.786900},
-	year = 2021,
-	month = {nov},
-	publisher = {Frontiers Media {SA}},
-	volume = {15},
-	author = {Samuel J. Gershman and Carolyn E. Jones and Kenneth A. Norman and Marie-H. Monfils and Yael Niv},
-	title = {Corrigendum: Gradual extinction prevents the return of fear: implications for the discovery of state},
-	journal = {Frontiers in Behavioral Neuroscience}
-}
-@article{10Lancaster_2020,
-	doi = {10.1016/j.brat.2020.103730},
-	url = {https://doi.org/10.1016%2Fj.brat.2020.103730},
-	year = 2020,
-	month = {dec},
-	publisher = {Elsevier {BV}},
-	volume = {135},
-	pages = {103730},
-	author = {Cynthia L. Lancaster and Marie-H. Monfils and Michael J. Telch},
-	title = {Augmenting exposure therapy with pre-extinction fear memory reactivation and deepened extinction: A randomized controlled trial},
-	journal = {Behaviour Research and Therapy}
-}
-@article{11Blujus_2020,
-	doi = {10.1037/pne0000209},
-	url = {https://doi.org/10.1037%2Fpne0000209},
-	year = 2020,
-	month = {sep},
-	publisher = {American Psychological Association ({APA})},
-	volume = {13},
-	number = {3},
-	pages = {406--423},
-	author = {Jenna K. Blujus and Ina Prevalska and Silvia F. Quevedo and Allison Auchter and Laura E. Korthauer and Michelle M. Dunk and Marie H. Monfils and Ira Driscoll},
-	title = {Updating mechanisms using an olfactory cue were not successful in improving memory in a rodent model of cognitive aging or in older adults.},
-	journal = {Psychology {\&} Neuroscience}
-}
-@article{12Auchter_2020,
-	doi = {10.3389/fncel.2020.00130},
-	url = {https://doi.org/10.3389%2Ffncel.2020.00130},
-	year = 2020,
-	month = {may},
-	publisher = {Frontiers Media {SA}},
-	volume = {14},
-	author = {Allison M. Auchter and Douglas W. Barrett and Marie H. Monfils and F. Gonzalez-Lima},
-	title = {Methylene Blue Preserves Cytochrome Oxidase Activity and Prevents Neurodegeneration and Memory Impairment in Rats With Chronic Cerebral Hypoperfusion},
-	journal = {Frontiers in Cellular Neuroscience}
-}
+ @article{1Hilz_2023, title={Estrous cycle state-dependent renewal of appetitive behavior recruits unique patterns of Arc mRNA in female rats}, volume={17}, ISSN={1662-5153}, url={http://dx.doi.org/10.3389/fnbeh.2023.1210631}, DOI={10.3389/fnbeh.2023.1210631}, journal={Frontiers in Behavioral Neuroscience}, publisher={Frontiers Media SA}, author={Hilz, Emily N. and Agee, Laura A. and Jun, Donyun and Monfils, Marie-H. and Lee, Hongjoo J.}, year={2023}, month=jul }
+
+ @article{2Smith_2023, title={Examining the long-term effects of traumatic brain injury on fear extinction in male rats}, volume={17}, ISSN={1662-5153}, url={http://dx.doi.org/10.3389/fnbeh.2023.1206073}, DOI={10.3389/fnbeh.2023.1206073}, journal={Frontiers in Behavioral Neuroscience}, publisher={Frontiers Media SA}, author={Smith, K. A. and Raskin, M. R. and Donovan, M. H. and Raghunath, V. and Mansoorshahi, S. and Telch, M. J. and Shumake, J. and Noble-Haeusslein, L. J. and Monfils, M. H.}, year={2023}, month=jun }
+
+ @article{3Raskin_2023, title={CO2 reactivity is associated with individual differences in appetitive extinction memory}, volume={266}, ISSN={0031-9384}, url={http://dx.doi.org/10.1016/j.physbeh.2023.114183}, DOI={10.1016/j.physbeh.2023.114183}, journal={Physiology &amp; Behavior}, publisher={Elsevier BV}, author={Raskin, Marissa and Malone, Cassidy and Hilz, Emily N. and Smits, Jasper A.J. and Telch, Michael J. and Otto, Michael W. and Shumake, Jason and Lee, Hongjoo J. and Monfils, Marie-H.}, year={2023}, month=jul, pages={114183} }
+
+ @article{4Agee_2023, title={Observing a trained demonstrator influences associative appetitive learning in rats}, volume={10}, ISSN={2054-5703}, url={http://dx.doi.org/10.1098/rsos.221224}, DOI={10.1098/rsos.221224}, number={4}, journal={Royal Society Open Science}, publisher={The Royal Society}, author={Agee, Laura A. and Ortega, Miriam E. and Lee, Hongjoo J. and Monfils, Marie-H.}, year={2023}, month=apr }
+
+ @article{5Agee_2023, title={Patterns of Arc mRNA expression in the rat brain following dual recall of fear- and reward-based socially acquired information}, volume={13}, ISSN={2045-2322}, url={http://dx.doi.org/10.1038/s41598-023-29609-6}, DOI={10.1038/s41598-023-29609-6}, number={1}, journal={Scientific Reports}, publisher={Springer Science and Business Media LLC}, author={Agee, Laura A. and Hilz, Emily N. and Jun, Dohyun and Nemchek, Victoria and Lee, Hongjoo J. and Monfils, Marie-H.}, year={2023}, month=feb }
+
+ @article{6Monfils_2022, title={The elegant complexity of fear in non-human animals}, volume={6}, ISSN={2397-8562}, url={http://dx.doi.org/10.1042/etls20220001}, DOI={10.1042/etls20220001}, number={5}, journal={Emerging Topics in Life Sciences}, publisher={Portland Press Ltd.}, author={Monfils, Marie-H. and Domjan, Michael}, editor={Milton, Amy L}, year={2022}, month=sep, pages={445–455} }
+
+ @article{7Monfils_2022, title={Friend recollections, and a collection of collaborations with Nadia}, volume={16}, ISSN={1662-5153}, url={http://dx.doi.org/10.3389/fnbeh.2022.954906}, DOI={10.3389/fnbeh.2022.954906}, journal={Frontiers in Behavioral Neuroscience}, publisher={Frontiers Media SA}, author={Monfils, Marie-H. and Lee, Hongjoo J. and Cofresí, Roberto U. and Gonzales, Rueben A.}, year={2022}, month=jul }
+
+ @article{8Monfils_2022, title={The High Road to Inhibiting Fear Memories}, volume={92}, ISSN={0006-3223}, url={http://dx.doi.org/10.1016/j.biopsych.2022.05.005}, DOI={10.1016/j.biopsych.2022.05.005}, number={2}, journal={Biological Psychiatry}, publisher={Elsevier BV}, author={Monfils, Marie-H.}, year={2022}, month=jul, pages={102–103} }
+
+ @article{9Hilz_2022, title={Hormonal contraceptives alter amphetamine place preference and responsivity in the intact female rat.}, volume={136}, ISSN={0735-7044}, url={http://dx.doi.org/10.1037/bne0000520}, DOI={10.1037/bne0000520}, number={4}, journal={Behavioral Neuroscience}, publisher={American Psychological Association (APA)}, author={Hilz, Emily N. and Olvera, Marcelle E. and Jun, Dohyun and Chadha, Megha and Gillette, Ross and Monfils, Marie-H. and Gore, Andrea C. and Lee, Hongjoo J.}, year={2022}, month=aug, pages={318–329} }
+
+ @article{10Smits_2022, title={CO2 reactivity as a biomarker of exposure-based therapy non-response: study protocol}, volume={22}, ISSN={1471-244X}, url={http://dx.doi.org/10.1186/s12888-022-04478-x}, DOI={10.1186/s12888-022-04478-x}, number={1}, journal={BMC Psychiatry}, publisher={Springer Science and Business Media LLC}, author={Smits, Jasper A. J. and Monfils, Marie-H. and Otto, Michael W. and Telch, Michael J. and Shumake, Jason and Feinstein, Justin S. and Khalsa, Sahib S. and Cobb, Adam R. and Parsons, E. Marie and Long, Laura J. and McSpadden, Bryan and Johnson, David and Greenberg, Alma}, year={2022}, month=dec }
+
+ @article{11Agee_2022, title={Appetitive Behavior in the Social Transmission of Food Preference Paradigm Predicts Activation of Orexin-A producing Neurons in a Sex-Dependent Manner}, volume={481}, ISSN={0306-4522}, url={http://dx.doi.org/10.1016/j.neuroscience.2021.11.032}, DOI={10.1016/j.neuroscience.2021.11.032}, journal={Neuroscience}, publisher={Elsevier BV}, author={Agee, Laura A. and Nemchek, Victoria and Malone, Cassidy A. and Lee, Hongjoo J. and Monfils, Marie-H.}, year={2022}, month=jan, pages={30–46} }
+
+ @article{12Nemchek_2021, title={Altering Perceived Context: Transportation Cues Influence Novelty-Induced Context Exploration}, volume={15}, ISSN={1662-5153}, url={http://dx.doi.org/10.3389/fnbeh.2021.714927}, DOI={10.3389/fnbeh.2021.714927}, journal={Frontiers in Behavioral Neuroscience}, publisher={Frontiers Media SA}, author={Nemchek, Victoria and Agee, Laura A. and Malone, Cassidy A. and Raskin, Marissa and Seese, Sydney and Monfils, Marie H.}, year={2021}, month=jul }
+
+ @article{13Hilz_2022, title={Sex differences in conditioned orienting and the role of estradiol in addiction-related behaviors.}, volume={136}, ISSN={0735-7044}, url={http://dx.doi.org/10.1037/bne0000484}, DOI={10.1037/bne0000484}, number={1}, journal={Behavioral Neuroscience}, publisher={American Psychological Association (APA)}, author={Hilz, Emily N. and Lewis, Suzanne M. and Olshavsky, Megan E. and Khoury, Elizabeth S. and Gore, Andrea C. and Monfils, Marie H. and Lee, Hongjoo J.}, year={2022}, month=feb, pages={19–29} }
+
+ @article{14Gershman_2021, title={Corrigendum: Gradual extinction prevents the return of fear: implications for the discovery of state}, volume={15}, ISSN={1662-5153}, url={http://dx.doi.org/10.3389/fnbeh.2021.786900}, DOI={10.3389/fnbeh.2021.786900}, journal={Frontiers in Behavioral Neuroscience}, publisher={Frontiers Media SA}, author={Gershman, Samuel J. and Jones, Carolyn E. and Norman, Kenneth A. and Monfils, Marie-H. and Niv, Yael}, year={2021}, month=nov }
+
 @Article{1,
   title = {Song, Monfils, Jones, and Niv.  Explaining the effectiveness of fear extinction through latent-cause inference. },
   author = {Marie-H. Monfils},
