API refresher and CV checks

--- a/chaps.bib
+++ b/chaps.bib
@@ -1,23 +1,2 @@
- @inbook{Raskin_2023, title={Reconsolidation and Fear Extinction: An Update}, ISBN={9783031430053}, ISSN={1866-3389}, url={http://dx.doi.org/10.1007/7854_2023_438}, DOI={10.1007/7854_2023_438}, booktitle={Current Topics in Behavioral Neurosciences}, publisher={Springer International Publishing}, author={Raskin, Marissa and Monfils, Marie-H.}, year={2023}, pages={307–333} }
+ @inbook{Curley_2023, title={Transgenerational Epigenetics}, ISBN={9780323919098}, url={http://dx.doi.org/10.1016/b978-0-323-91909-8.00023-2}, DOI={10.1016/b978-0-323-91909-8.00023-2}, booktitle={Handbook of Epigenetics}, publisher={Elsevier}, author={Curley, James P. and Mashoodh, Rahia and Champagne, Frances A.}, year={2023}, pages={465–478} }
 
-@InCollection{1,
-  title = {Reconsolidation and Fear extinction: an update.},
-  author = {Marie-H. Monfils},
-  booktitle = {Current Topics in Behavioral Neurosciences (CTBN). Mohamed Milad and Seth Norrholm, Editors. },
-  year = {2022},
-  publisher = {.},
-}
-@InCollection{2,
-  title = {How Can Intrusive Thinking Be Conceptualized at the Level of Psychological Mechanisms? },
-  author = {Marie-H. Monfils},
-  booktitle = {Ernst Strungmann Forum book Intrusive Thinking across Neuropsychological Disorders.},
-  year = {2021},
-  publisher = {.},
-}
-@InCollection{3,
-  title = {Neuropsychological Mechanisms of Intrusive Thinking. },
-  author = {Marie-H. Monfils},
-  booktitle = {In Ernst Strungmann Forum book Intrusive Thinking across Neuropsychological Disorders},
-  year = {2021},
-  publisher = {.},
-}
