--- a/preprints.bib
+++ b/preprints.bib
@@ -1,12 +1,2 @@
- @article{1Seese_2023, title={Conspecific interactions predict social transmission of fear in female rats}, url={http://dx.doi.org/10.21203/rs.3.rs-2958174/v1}, DOI={10.21203/rs.3.rs-2958174/v1}, publisher={Research Square Platform LLC}, author={Seese, Sydney and Tinsley, Carolyn E and Wulffraat, Grace and Hixon, J. Gregory and Monfils, Marie H.}, year={2023}, month=may }
-
- @article{2Smits_2022, title={CO2 Reactivity as a Biomarker of Exposure-based Therapy Non-Response: Study Protocol}, url={http://dx.doi.org/10.21203/rs.3.rs-2298817/v1}, DOI={10.21203/rs.3.rs-2298817/v1}, publisher={Research Square Platform LLC}, author={Smits, Jasper A. J. and Monfils, Marie-H. and Otto, Michael W. and Telch, Michael J. and Shumake, Jason and Feinstein, Justin S. and Khalsa, Sahib S. and Cobb, Adam R. and Parsons, E. Marie and Long, Laura J. and McSpadden, Bryan and Johnson, David and Greenberg, Alma and Consortium, Exposure Therapy Consortium Therapy}, year={2022}, month=dec }
-
- @article{3Agee_2022, title={Patterns of Arc mRNA expression in the rat brain following dual recall of fear- and reward-based socially acquired information}, url={http://dx.doi.org/10.1101/2021.12.30.474464}, DOI={10.1101/2021.12.30.474464}, publisher={Cold Spring Harbor Laboratory}, author={Agee, Laura A. and Hilz, Emily N. and Jun, Dohyun and Nemchek, Victoria and Lee, Hongjoo J. and Monfils, Marie-H.}, year={2022}, month=jan }
-
- @article{4Song_2021, title={Explaining the effectiveness of fear extinction through latent-cause inference}, url={http://dx.doi.org/10.31234/osf.io/2fhr7}, DOI={10.31234/osf.io/2fhr7}, publisher={Center for Open Science}, author={Song, Mingyu and Jones, Carolyn and Monfils, Marie-H. and Niv, Yael}, year={2021}, month=oct }
-
- @article{5Hilz_2021, title={Expression patterns of Arc mRNA after renewal of appetitive behavior in female rats}, url={http://dx.doi.org/10.1101/2021.07.20.453088}, DOI={10.1101/2021.07.20.453088}, publisher={Cold Spring Harbor Laboratory}, author={Hilz, Emily N and Agee, Laura A. and Jun, Donyun and Monfils, Marie H and Lee, Hongjoo J.}, year={2021}, month=jul }
-
- @article{6Hilz_2021, title={Hormonal contraceptives alter amphetamine place preference and responsivity in the intact female rat}, url={http://dx.doi.org/10.1101/2021.07.28.454029}, DOI={10.1101/2021.07.28.454029}, publisher={Cold Spring Harbor Laboratory}, author={Hilz, Emily N. and Olvera, Marcelle and Jun, Dohyun and Chadha, Megha and Gillette, Ross and Monfils, Marie-H. and Gore, Andrea C. and Lee, Hongjoo J.}, year={2021}, month=jul }
+ @article{1Schnyer_2022, title={Priming, to appear in Oxford Handbook of Human Memory}, url={http://dx.doi.org/10.31219/osf.io/4jdy7}, DOI={10.31219/osf.io/4jdy7}, publisher={Center for Open Science}, author={Schnyer, David M and Dobbins, Ian}, year={2022}, month=sep }
 
