new CVs and script organization

--- a/preprints.bib
+++ b/preprints.bib
@@ -1,2 +1,2 @@
- @article{1Schnyer_2022, title={Priming, to appear in Oxford Handbook of Human Memory}, url={http://dx.doi.org/10.31219/osf.io/4jdy7}, DOI={10.31219/osf.io/4jdy7}, publisher={Center for Open Science}, author={Schnyer, David M and Dobbins, Ian}, year={2022}, month=sep }
+ @article{1Ashokkumar_2022, title={Restoring Honor by Slapping or  Disowning the Daughter}, url={http://dx.doi.org/10.31234/osf.io/xzr3u}, DOI={10.31234/osf.io/xzr3u}, publisher={Center for Open Science}, author={Ashokkumar, Ashwini and Swann, William B.}, year={2022}, month=mar }
 
